# Labs

Visualisation/class_2/: Untitled.ipynb
c++/Homework2/: file.txt  main.cpp
c++/homework3/: CMakeLists.txt  main.cpp  safe_c_array_t.cpp  safe_c_array_t.h  safe_long_long_t.cpp
c++/lab4/: CMakeLists.txt  main.cpp
c++/lab4/int_list_t/: CMakeLists.txt  int_list_t.cpp  int_list_t.h
c++/lab5/: CMakeLists.txt  main.cpp
c++/lab5/game/: game.cpp  game.h  structures.h
c++/lab5/strategies/: CMakeLists.txt  computer_first_strategy.cpp  computer_first_strategy.h  computer_interface.cpp  computer_interface.h  computer_second_strategy.cpp  computer_second_strategy.h  human.cpp  human.h  interface.h
